group 'pl.edu.agh.sixes'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'Application'
    }
}

dependencies {
    compile 'com.google.guava:guava:23.0'
    compile "org.projectlombok:lombok:1.16.16"
    testCompile group: 'junit', name: 'junit', version: '4.12'
}